--- a/lab1/main.html
+++ b/lab1/main.html
@@ -11,7 +11,7 @@
     <section id="info_links">
         <div class="img-wrap" id="wrap-africa">
             <a href="africa.html" class="link_img">
-                <img src="../img/africa.jpg" alt="Africa" id="test-img">
+                <img src="../img/africa.jpg" alt="Africa">
             </a>
         </div>
         <div class="img-wrap" id="wrap-budism">
