finished main pages

--- a/FourWheels/index.html
+++ b/FourWheels/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+    <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/style.css">
-    <title>Homit</title>
+    <title>4Wheels</title>
 </head>
 <body>
     <nav>
@@ -15,16 +15,16 @@
                     <a href="Templates/cars-layout.html" class="nav-bar-links">Cars</a>
                 </li>
                 <li>
-                    <a href="" class="nav-bar-links">Accesories</a>
+                    <a href="Templates/accesories-layout.html" class="nav-bar-links">Accesories</a>
                 </li>
                 <li>
-                    <a href="" class="nav-bar-links">Wheels</a>
+                    <a href="Templates/wheels-layout.html" class="nav-bar-links">Wheels</a>
                 </li>
                 <li>
-                    <a href="" class="nav-bar-links">Services</a>
+                    <a href="Templates/services-layout.html" class="nav-bar-links">Services</a>
                 </li>
                 <li>
-                    <a href="" class="log_in-button">Log in</a>
+                    <a href="Templates/auth-page.html" class="log_in-button">Log in</a>
                 </li>
             </ul>
         </div> 
@@ -127,5 +127,8 @@
         </ul>
         <img src="/Img/address-map.png" alt="map">
     </footer>
+    
+    <script src="Scripts/script.js"></script>
+
 </body>
 </html>
