changed css tructure

--- a/FourWheels/index.html
+++ b/FourWheels/index.html
@@ -3,7 +3,10 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Css/style.css">
+    <link rel="stylesheet" href="Css/layout.css">
+    <link rel="stylesheet" href="Css/main-page.css">
+    <link rel="stylesheet" href="Css/car-cards.css">
+    <link rel="stylesheet" href="Css/accesories-card.css">
     <title>4Wheels</title>
 </head>
 <body>
@@ -12,16 +15,16 @@
             <a id="logo" class="nav-bar-links" href="">4Wheels</a>
             <ul class="nav-bar">
                 <li>
-                    <a href="Templates/cars-layout.html" class="nav-bar-links">Cars</a>
+                    <a href="Templates/cars-page.html" class="nav-bar-links">Cars</a>
                 </li>
                 <li>
-                    <a href="Templates/accesories-layout.html" class="nav-bar-links">Accesories</a>
+                    <a href="Templates/accesories-page.html" class="nav-bar-links">Accesories</a>
                 </li>
                 <li>
-                    <a href="Templates/wheels-layout.html" class="nav-bar-links">Wheels</a>
+                    <a href="Templates/wheels-page.html" class="nav-bar-links">Wheels</a>
                 </li>
                 <li>
-                    <a href="Templates/services-layout.html" class="nav-bar-links">Services</a>
+                    <a href="Templates/services-page.html" class="nav-bar-links">Services</a>
                 </li>
                 <li>
                     <a href="Templates/auth-page.html" class="log_in-button">Log in</a>
