--- a/FourWheels/index.html
+++ b/FourWheels/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Css/layout.css">
-    <link rel="stylesheet" href="Css/main-page.css">
-    <link rel="stylesheet" href="Css/car-cards.css">
-    <link rel="stylesheet" href="Css/accesories-card.css">
+    <link rel="stylesheet" href="Css/pages/main-page.css">
+    <link rel="stylesheet" href="Css/components/cards/car-cards.css">
+    <link rel="stylesheet" href="Css/components/cards/accesories-card.css">
     <title>4Wheels</title>
 </head>
 <body>
@@ -36,7 +36,7 @@
         <h2 class="section-title">Top offers</h2>
         <div class="top-offer-cards">
             <div class="car-card">
-                <a href=""><img src="Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -47,7 +47,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -58,7 +58,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -69,7 +69,7 @@
                 <p class="card-price">56.000€</p>
             </div>
             <div class="car-card">
-                <a href=""><img src="Img/car1.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="Img/cars/car1.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Mercedes GLC 250</h3>
                 <div class="card-details">
                     <p>Year :</p>
@@ -85,22 +85,22 @@
         <h2 class="section-title">Accessories</h2>
         <div class="top-offer-cards">
             <div class="accessories-card">
-                <a href=""><img src="Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
             <div class="accessories-card">
-                <a href=""><img src="Img/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
+                <a href=""><img src="Img/accesories/car-accessories-vacuum.jpg" alt="" class="card-img"></a>
                 <h3 class="card-title">Vacuum cleaner</h3>
                 <p class="card-price">75€</p>
             </div>
@@ -109,14 +109,14 @@
     <section id="parteners-section">
         <h2 class="section-title">Our parteners</h2>
         <div id="parteners-wrap">
-            <img src="Img/parteners-toyota.png" alt="" class="parteners-logo">
-            <img src="Img/parteners-toyota.png" alt="" class="parteners-logo">
-            <img src="Img/parteners-toyota.png" alt="" class="parteners-logo">
-            <img src="Img/parteners-toyota.png" alt="" class="parteners-logo">
-            <img src="Img/parteners-toyota.png" alt="" class="parteners-logo">
-            <img src="Img/parteners-toyota.png" alt="" class="parteners-logo">
-            <img src="Img/parteners-toyota.png" alt="" class="parteners-logo">
-            <img src="Img/parteners-toyota.png" alt="" class="parteners-logo">
+            <img src="Img/partners/parteners-toyota.png" alt="" class="parteners-logo">
+            <img src="Img/partners/parteners-toyota.png" alt="" class="parteners-logo">
+            <img src="Img/partners/parteners-toyota.png" alt="" class="parteners-logo">
+            <img src="Img/partners/parteners-toyota.png" alt="" class="parteners-logo">
+            <img src="Img/partners/parteners-toyota.png" alt="" class="parteners-logo">
+            <img src="Img/partners/parteners-toyota.png" alt="" class="parteners-logo">
+            <img src="Img/partners/parteners-toyota.png" alt="" class="parteners-logo">
+            <img src="Img/partners/parteners-toyota.png" alt="" class="parteners-logo">
         </div>
     </section>
     <footer>
@@ -128,7 +128,7 @@
             <li id="telegram-link"><a href="">telegram.com/4Wheels</a></li>
             <li id="office-adress"><a href="">Str. 27 august 32/1</a></li>
         </ul>
-        <img src="/Img/address-map.png" alt="map">
+        <img src="Img/footer/address-map.png" alt="map">
     </footer>
     
     <script src="Scripts/script.js"></script>
