--- a/FourWheels/index.html
+++ b/FourWheels/index.html
@@ -31,7 +31,23 @@
                 </li>
             </ul>
         </div> 
-    </nav> 
+    </nav>
+    <section id="porche-slider">
+        <div class="slider-carrousel">
+            <img src="Img/porche-slider/porche-992.jpg" alt="">
+            <img src="Img/porche-slider/porche-turbo-gt.jpg" alt="">
+            <img src="Img/porche-slider/porsche-911-gt3.png" class="last-img" alt="">
+            <div class="slider-arrows">
+                <img src="Img/porche-slider/white-arrow-png-41963.png" alt="">
+                <img src="Img/porche-slider/white-arrow-png-41963.png" alt="">
+            </div>
+        </div>
+        <div id="slider-points">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+    </section> 
     <section id="top-offers-section">
         <h2 class="section-title">Top offers</h2>
         <div class="top-offer-cards">
@@ -132,6 +148,6 @@
     </footer>
     
     <script src="Scripts/script.js"></script>
-
+    <script src="Scripts/porche-slider.js"></script>
 </body>
 </html>
